--- a/BusinessCase5_GroupM_Notebook.ipynb
+++ b/BusinessCase5_GroupM_Notebook.ipynb
@@ -37,12 +37,15 @@
    "metadata": {},
    "source": [
     "* [1. Business Understanding](#1)\n",
-    "* [2. Data Understanding](#2)\n",
-    "* [3. Data Preparation](#3)\n",
-    "* [4. Modeling and Evaluation](#4)\n",
-    "    * [4.1. Association Rules](#4.1)\n",
-    "    * [4.2. Customers Segmentation by product](#4.2)\n",
-    "* [5. Deployment](#5)"
+    "* [2. Data Understanding and Preparation](#2)\n",
+    "* [3. Modeling and Evaluation](#3)\n",
+    "    * [3.1. Product Co-Occurence : Association Rules](#3.1)\n",
+    "    * [3.2. Clustering](#3.2)    \n",
+    "        * [3.2.1 Point-of-Sales Clustering by Value](#3.2.1)\n",
+    "        * [3.2.2 Point-of-Sales Clustering by Product preference](#3.2.2)\n",
+    "    * [3.3. Forecast](#3.3)\n",
+    "        * [3.2.1 Units Product forecast (6 weeks ahead)](#3.3.1)\n",
+    "        * [3.2.2 Units Product forecast by Point-of-Sale (6 weeks ahead)](#3.3.2)"
    ]
   },
   {
@@ -58,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Data Understanding <a class=\"anchor\" id=\"2\"></a>"
+    "# 2. Data Understanding and Preparation <a class=\"anchor\" id=\"2\"></a>"
    ]
   },
   {
@@ -77,7 +80,6 @@
     "import os\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "#import pandas_profiling\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -98,8 +100,7 @@
     "\n",
     "from sklearn.base import clone\n",
     "from sklearn.metrics import pairwise_distances\n",
-    "\n",
-    "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               # from sompy.sompy import SOMFactory                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                # from sompy.visualization.mapview import View2                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              # from sompy.visualization.bmuhits import BmuHitsVi                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              \n",
+    "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              \n",
     "sns.set_style(style='white')\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -2584,7 +2585,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Product co-ocorrences -> Association Rules"
+    "# 3. Modeling <a class=\"anchor\" id=\"3\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1. Product co-ocorrences -> Association Rules <a class=\"anchor\" id=\"3.1\"></a>"
    ]
   },
   {
@@ -5841,14 +5849,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clustering"
+    "## 3.2. Clustering <a class=\"anchor\" id=\"3.2\"></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Point-of-Sales Clustering by Value\n"
+    "### 3.2.1. Point-of-Sales Clustering by Value <a class=\"anchor\" id=\"3.2.1\"></a>\n"
    ]
   },
   {
@@ -7836,7 +7844,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Point-of-Sales Clustering by Product preference\n"
+    "### 3.2.2. Point-of-Sales Clustering by Product preference <a class=\"anchor\" id=\"3.2.2\"></a>\n"
    ]
   },
   {
@@ -50857,7 +50865,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Forecasting\n"
+    "## 3.3. Forecasting <a class=\"anchor\" id=\"3.3\"></a>\n"
    ]
   },
   {
@@ -51136,7 +51144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Units Product forecast (6 weeks ahead)"
+    "### 3.3.1. Units Product forecast (6 weeks ahead) <a class=\"anchor\" id=\"3.3.1\"></a>"
    ]
   },
   {
@@ -52109,7 +52117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Units Product forecast by Point-of-Sale (6 weeks ahead)"
+    "### 3.3.2. Units Product forecast by Point-of-Sale (6 weeks ahead) <a class=\"anchor\" id=\"3.3.2\"></a>"
    ]
   },
   {
@@ -53002,7 +53010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
